# dagster-dags

./: .gitignore  Containerfile  README.md  constants.py  dagster.yaml  pyproject.toml  setup.cfg  setup.py  workspace.yaml
.github/workflows/: branch_ci.yml  build-containers.yml  ci.yml  merged_ci.yml  tagged_ci.yml
cloud_archives/: __init__.py  huggingface_ops.py  kbatch_ops.py
cloud_archives/nwp/: __init__.py
cloud_archives/nwp/icon/: __init__.py  _factories.py  _ops.py  icon_eu.py  icon_global.py
cloud_archives/ops/: __init__.py  generic.py  huggingface.py  kbatch.py
cloud_archives/pv/: __init__.py
cloud_archives/pv/passiv/: __init__.py  filenames.py  passiv_daily.py  passiv_monthly.py  passiv_year.py  ss_rawdata_api.py
containers/gfs/: Containerfile  download_combine_gfs.py
containers/icon/: Containerfile  download_combine_upload_icon.py  download_combine_upload_icon_eu.py  download_combine_upload_icon_global.py  main.py  test.py
containers/moglobal/: Containerfile  download_process_global.py
containers/sat/: Containerfile  download_process_sat.py  test_download_process_sat.py
dags.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dags_tests/: cams_test.py  compile_test.py
infrastructure/: docker-compose.yaml
local_archives/: __init__.py  partitions.py
local_archives/air/: __init__.py  cams_eu.py
local_archives/nwp/: __init__.py  _generic_definitions_factory.py  _generic_ops.py  ceda_mo_um_global.py  ecmwf_ens_stat_india.py  ecmwf_hres_ifs_india.py  ecmwf_hres_ifs_west_europe.py  jobs.py  noaa-gfs-global.py
local_archives/nwp/cams/: __init__.py  _definitions_factory.py  _factories.py  _ops.py  cams_eu.py  cams_global.py
local_archives/nwp/ceda/: __init__.py  ceda_global.py  ceda_uk.py
local_archives/nwp/ecmwf/: __init__.py  _factories.py  _ops.py  ecmwf_ens_stat_india.py  ecmwf_india.py  ecmwf_malta.py  ecmwf_nw_india.py  ecmwf_uk.py
local_archives/nwp/gfs/: __init__.py  gfs.py
local_archives/nwp/meteomatics/: __init__.py  meteomatics_sites_india.py
local_archives/sat/: __init__.py  eumetsat_iodc_lrv.py  jobs.py
local_archives/sat/assets/eumetsat/: __init__.py  common.py  iodc.py
local_archives/sat/eumetsat/: __init__.py  eumetsat_iodc.py
managers/: __init__.py  xr_zarr_local.py
nwp/: __init__.py  assets.py  jobs.py
nwp/assets/: __init__.py
nwp/assets/cams/: __init__.py  cams.py  cams_eu.py  cams_global.py  utils.py
nwp/assets/dwd/: archive_to_hf.py  common.py  utils.py
nwp/assets/ecmwf/: consts.py  mars.py
nwp/cams/: __init__.py  _factories.py  cams_eu.py  cams_global.py
nwp/ecmwf/: __init__.py  _factories.py  ecmwf_nw_india.py  ecmwf_uk.py  jobs.py
resources/: __init__.py  meteomatics.py
sat/: __init__.py  jobs.py
sat/assets/: __init__.py
sat/assets/eumetsat/: common.py  iodc.py  rss.py  zero_deg.py
src/cloud_archives/: __init__.py
src/dagster_dags/: __init__.py  definitions.py
src/dagster_dags/air/: cams_eu.py
src/dagster_dags/assets/air/: cams_eu.py
src/dagster_dags/assets/nwp/: ceda_mo_um_global.py  ecmwf_ens_stat_india.py  ecmwf_ens_uk.py  ecmwf_hres_ifs_india.py  ecmwf_hres_ifs_west_europe.py  noaa-gfs-global.py
src/dagster_dags/assets/pv/: ss_passiv_30min.py  ss_passiv_5min.py
src/dagster_dags/assets/pv/passiv/: __init__.py  filenames.py  passiv_monthly.py  passiv_year.py
src/dagster_dags/assets/sat/: eumetsat_iodc_lrv.py  eumetsat_odegree_lrv.py  eumetsat_rss_lrv.py
src/dagster_dags/nwp/: ecmwf_hres_ifs_west_europe.py
src/dagster_dags/pv/: __init__.py
src/dagster_dags/pv/passiv/: passiv_year.py
src/dagster_dags/resources/: __init__.py  parquet_io_manager.py  sheffield_solar_api.py
src/local_archives/nwp/: noaa-gfs-global.py
tests/: compile_test.py  test_passiv.py
tests/cloud_archives/ops/: kbatch_test.py
tests/cloud_archives/pv/: test_passiv.py
