# --- PROJECT CONFIGURATION --- #

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

# Metadata (see https://peps.python.org/pep-0621/)
[project]
name = "dags"
dynamic = ["version"] # Set automtically using git: https://setuptools-git-versioning.readthedocs.io/en/stable/
description = "Dags for running jobs via Dagster on Leonardo"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.11.0"
license = {text = "MIT License"}
authors = [
    { name = "Jacob Bieker", email = "jacob@openclimatefix.org"}, 
    { name = "Sol Cotton", email = "sol@openclimatefix.org"}
]
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "cdsapi >= 0.6.1",
    "ecmwf-api-client >= 1.6.3",
    "dagit >= 1.5.11",
    "dagster >= 1.5.11",
    "dagster-cloud >= 1.5.11",
    "dagster-docker >= 0.21.11",
    "huggingface-hub >= 0.19.4",
    "numpy >= 1.23.2",
    "nwp-consumer == 0.1.30",
    "ocf-blosc2 >= 0.0.3",
    "pathlib >= 1.0.1",
    "requests >= 2.28.0",
    "requests-toolbelt >= 0.9.1",
    "xarray >= 2022.3.0",
    "zarr >= 2.13.3",
    "satip >= 2.11.17",
]

[project.optional-dependencies]
dev = [
    "mypy == 0.910",
    "ruff == 0.0.259",
    "unittest-xml-reporting == 3.2.0",
    "dagster-webserver == 1.5.11",
    "pytest == 7.4.1",
    "python-lsp-server == 1.7.4"
]

[tool.setuptools.packages.find]
exclude = ["*_tests"]

# Ruff configuration
# * See https://beta.ruff.rs/docs/
[tool.ruff]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle
    "W",   # whitespace and newlines
    "I",   # isort
    "UP",  # modernize
    "ANN", # flake8 type annotations
    "S",   # flake8 bandit
    "B",   # flake8 bugbear
    "C4",  # flake8 comprehensions
    "T20", # flake8 print
    "SIM", # flake8 simplify
    "ARG", # flake8 unused arguments
    "D",   # pydocstyle
]
line-length = 100
ignore = ["D203", "D213", "ANN101"]
exclude = ["__init__.py"]

[tool.ruff.per-file-ignores]
"test*" = ["D", "ANN"]

